# SigmaNotepad

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
app/: CMakeLists.txt
app/include/: FontSettingsWindow.h  MyMainWindow.h
app/src/: FontSettingsWindow.cpp  MyMainWindow.cpp
core/: CMakeLists.txt
core/include/: IEventHandler.h  IRenderFrame.h  Window.h
core/include/Managers/: IWindowRenderingManager.h  WindowRenderingManager.h
core/include/Renderer/: Button.h  Dropdown.h  DropdownItem.h  ExtendableDropdownItem.h  Font.h  IBackground.h  IDropdownHolder.h  IEditField.h  IInteractableColors.h  IRenderHandler.h  IText.h  ITextAligment.h  NumericEdit.h  Offset.h  Panel.h  ScrollLayout.h  ScrollLayoutText.h  SigmaObject.h  SigmaRenderableObject.h  TextEdit.h  TextHorizontalAligment.h  TextLabel.h  TextVerticalAligment.h
core/include/Window/: Window.h
core/src/Managers/: WindowRenderingManager.cpp
core/src/Renderer/: Button.cpp  Dropdown.cpp  DropdownItem.cpp  ExtendableDropdownItem.cpp  Font.cpp  Panel.cpp  ScrollLayout.cpp  SigmaObject.cpp  SigmaRenderableObject.cpp  TextEdit.cpp  TextLabel.cpp
core/src/Window/: Window.cpp
include/: StringHelpers.h
include/Managers/: IWindowRenderingManager.h  RendererManager.h  WindowRenderingManager.h
include/Renderer/: Button.h  Font.h  IBackground.h  IText.h  ITextAligment.h  Panel.h  RendererObject.h  SigmaObject.h  SigmaRenderableObject.h  TextEdit.h  TextLabel.h  TextVerticalAligment.h
src/Managers/: RendererManager.cpp  WindowRenderingManager.cpp
src/Renderer/: Button.cpp  Panel.cpp  SigmaObject.cpp  SigmaRenderableObject.cpp  TextEdit.cpp  TextLabel.cpp
tests/: CMakeLists.txt  SigmaObjectFixture.cpp  SigmaObjectFixture.h  TextEditFixture.cpp  TextEditFixture.h  main.cpp
